# TF_NADST

./: README.md  pyproject.toml  tf_nadst_test.py  tf_nadst_train.py
model/: encoder.py  evaluator.py  fertility_decoder.py  generator.py  modules.py  nadst.py  predict.py  run_test.py  run_training.py  state_decoder.py
script/: original_nadst_result.py  result  run.sh
utils_s/: config.py  dataset.py  fix_label.py  lang.py  mapping.pair  utils.py  utils_multiWOZ_DST.py
