[tool.poetry]
name = "TF_NADST"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.1"
sentencepiece = "0.1.91"
numpy = "1.18.5"
utils = "^1.0.1"
tensorflow = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
